--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release Theme
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   release:
@@ -18,14 +18,20 @@ jobs:
           node-version: "20.x"
       - name: Install dependencies
         run: npm install
-      - name: Create .vsix file
-        run: npx vsce package
+      - name: Bump version
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          npm version patch -m "chore: bump version to %s"
+          git push
       - name: Get package name
         id: package_name
         run: echo "name=$(node -p "require('./package.json').name")" >> $GITHUB_OUTPUT
       - name: Get version
         id: version
         run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+      - name: Create .vsix file
+        run: npx vsce package
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -46,9 +52,3 @@ jobs:
           asset_path: ./${{ steps.package_name.outputs.name }}-${{ steps.version.outputs.version }}.vsix
           asset_name: ${{ steps.package_name.outputs.name }}-${{ steps.version.outputs.version }}.vsix
           asset_content_type: application/vsix
-      - name: Bump version
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          npm version patch -m "chore: bump version to %s"
-          git push
